--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "express": "~4.16.1",
     "googleapis": "^51.0.0",
     "http-errors": "~1.6.3",
-    "https": "^1.0.0",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "request": "^2.88.2"
   }
 }
